karnc/tests/fixtures/negative/60_cross_context_money_mismatch/src/commerce/money.karn
commons commerce.money

type Amount = Int where NonNegative
